# CHDlite

./: .gitignore  CMakeLists.txt  README.md  benchmark.conf.example  build.ps1  todo.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: release.yml
Documents/: Codec_Benchmark_Results.md  Disc_Platform_Identification.md  Specifications.md  benchmarkspecs.md  speedpatch.md  updates.md
LICENSES/: chdman-simd.LICENSE
References/romexplorer_ref/: README.md
References/romexplorer_ref/include/romexplorer-chd/: chd_reader.h  hashing.h  logger.h  models.h
References/romexplorer_ref/src/: chd_reader.cpp  hashing.cpp  logger.cpp
cmake/: CHDliteConfig.cmake.in
gui/Documents/: gui_specs.md
gui/app/: pubspec.yaml
gui/app/lib/: main.dart
gui/app/lib/screens/: home_screen.dart  settings_screen.dart
gui/app/lib/services/: chdlite_ffi.dart  operation_handler.dart  settings_manager.dart
gui/app/lib/widgets/: drop_icon_button.dart  output_display.dart
gui/app/linux/: CMakeLists.txt
gui/app/linux/runner/: my_application.cc
gui/app/macos/Runner.xcodeproj/: project.pbxproj
gui/app/macos/Runner/Configs/: AppInfo.xcconfig
gui/app/test/: widget_test.dart
gui/app/windows/: CMakeLists.txt
gui/app/windows/runner/: Runner.rc  main.cpp
scripts/: build_all_linux.sh  codec_benchmark.sh  codec_decomp_benchmark.sh
src/c-wrapper/: chdlite_c.cpp  chdlite_c.h
src/chd-api/: chd_api.hpp  chd_archiver.cpp  chd_archiver.hpp  chd_extractor.cpp  chd_extractor.hpp  chd_frontend.cpp  chd_frontend.hpp  chd_processor.cpp  chd_processor.hpp  chd_reader.cpp  chd_reader.hpp  chd_types.hpp  detect_game_platform.cpp  detect_game_platform.hpp  detect_platform.hpp  detect_system.cpp  detect_system.hpp
src/cli/: chdlite_cli.cpp
src/mame/osd/: eminline.h  osdcomm.h  osdcore.h  osdcore_impl.cpp  osdfile_impl.cpp  osdsync.cpp  strconv.cpp
src/mame/util/: cdrom.cpp  chd.cpp  chd.h  chdcodec.cpp  chdcodec.h  hashing.cpp  hashing.h
tests/: archive_test.cpp  benchmark_chd.cpp  cli_test.cpp  cue_style_test.cpp  debug_detect.cpp  detect_test.cpp  smoke_test.cpp
vcpkg-overlays/zlib-ng/: portfile.cmake  vcpkg.json
